<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/button_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_file_picker_label" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="▶ Play"
        android:enabled="false" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="⏹ Stop"
        android:enabled="false" />

    <TextView
        android:id="@+id/textView"
        android:paddingStart="4dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_to_external_audio_internet" />

    <EditText
        android:hint="@string/hint"
        android:id="@+id/stream_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
        android:textColor="#4A87AF" />

    <Button
        android:id="@+id/button_stream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Stream from link" />
</LinearLayout>